--- a/Resources/Prototypes/Entities/Structures/Machines/furnace.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/furnace.yml
@@ -13,6 +13,7 @@
         storagebase: !type:Container
           ents: []
     - type: Storage
+      capacity: 500
       collideInsert: true
       whitelist:
         tags:
