--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/medical_thermometer.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/medical_thermometer.yml
@@ -1,8 +1,8 @@
 - type: entity
-  name: medical thermometer
+  name: infrared thermometer
   parent: BaseItem
   id: HandheldMedicalThermometer
-  description: A hand-held medical thermometer. Design to be used under the arm and adapted for various humanoid species.
+  description: Point this at an object to take its temperature.
   components:
   - type: Sprite
     sprite: Objects/Specific/Medical/thermometer.rsi
