Add furnace guidebook

--- a/Resources/Prototypes/Entities/Structures/Machines/furnace.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/furnace.yml
@@ -59,3 +59,6 @@
     - type: Furnace
     - type: Temperature
       heatDamageThreshold: 1800
+    - type: GuideHelp
+      guides:
+      - Metallurgy
