--- a/Resources/Prototypes/Entities/Structures/Machines/furnace.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/furnace.yml
@@ -58,6 +58,7 @@
       dumpHeat: 0 # handled in FurnaceSystem itself
     - type: Furnace
     - type: Temperature
+      specificHeat: 1000
       heatDamageThreshold: 1800
     - type: GuideHelp
       guides:
