Add flux for glassmaking

--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/morgue.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/morgue.yml
@@ -101,6 +101,7 @@
     state: ash
   - type: Tag
     tags:
+    - Ore
     - Trash
   - type: SolutionContainerManager
     solutions:
@@ -113,5 +114,8 @@
     sourceSolution: food
     ignoreEmpty: true
   - type: DeleteOnTrigger
+  - type: Material
+    materials:
+      Soda: 100
   - type: Extractable
     grindableSolutionName: food
