--- a/Resources/Prototypes/Entities/Structures/Machines/furnace.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/furnace.yml
@@ -4,10 +4,14 @@
   parent: BaseMachinePowered
   description: It produces sheets and ingots using ores.
   components:
+    - type: ActivatableUI
+      key: enum.FurnaceUiKey.Key
     - type: UserInterface
       interfaces:
       - key: enum.StorageUiKey.Key
         type: StorageBoundUserInterface
+      - key: enum.FurnaceUiKey.Key
+        type: FurnaceBoundUserInterface
     - type: ContainerContainer
       containers:
         storagebase: !type:Container
