Radiation Storm Rods are purchaseable from cargo and can be used draw radiation pulses to it

--- a/Resources/Prototypes/Catalog/Cargo/cargo_engineering.yml
+++ b/Resources/Prototypes/Catalog/Cargo/cargo_engineering.yml
@@ -106,3 +106,13 @@
   cost: 80000
   category: Engineering
   group: market
+
+- type: cargoProduct
+  id: StormRod
+  icon:
+    sprite: Structures/Power/Generation/Singularity/storm_rod.rsi
+    state: ca_on
+  product: RadiationStormRod
+  cost: 10000
+  category: Engineering
+  group: market
