Dead bodies can no longer be sold and Morgues are now free to use

--- a/Resources/Prototypes/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/base.yml
@@ -321,9 +321,10 @@
   - type: StandingState
   - type: Fingerprint
   - type: MobPrice
-    price: -10000
+    price: 0
     deathPenalty: 1.0
   - type: CanEscapeInventory
+  - type: CargoSellBlacklist
 
 - type: entity
   save: false
