A mech drill can now be built and installed for the Ripley

--- a/Resources/Prototypes/Catalog/Research/technologies.yml
+++ b/Resources/Prototypes/Catalog/Research/technologies.yml
@@ -305,6 +305,7 @@
   - RipleyCentralElectronics
   - RipleyPeripheralsElectronics
   - MechEquipmentGrabber
+  - MechEquipmentDrill
   - RipleyHarness
   - RipleyLArm
   - RipleyRArm
