--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -388,6 +388,7 @@
     - RipleyLLeg
     - RipleyRLeg
     - MechEquipmentGrabber
+    - MechEquipmentDrill
   - type: MaterialStorage
     whitelist:
       tags:
