--- a/Resources/Prototypes/Mining/Random/mining.yml
+++ b/Resources/Prototypes/Mining/Random/mining.yml
@@ -72,6 +72,7 @@
         - Claymore
         - ClothingBeltChampion
         - MechEquipmentGrabber
+        - MechEquipmentDrill
         - RipleyHarness
         - RipleyLArm
         - RipleyLLeg
